# YouTube-Echo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  app.py  config.json  main.py  pyproject.toml  requirements.txt  setup.py  streamlit.py  template.py
.github/workflows/: cicd-build.yml  docker-build.yml  python-app.yml
modules/: chat.py  helpers.py  persistance.py  rag.py  summary.py  transcription.py  ui.py
pages/: chat.py
research/: experiments.ipynb
src/: __init__.py  chat.py  fastapi.py  helpers.py  rag.py  streamlit.py  summary.py  transcription.py  youtube.py
src/app/: database.py  rag.py  transcription.py
static/: style.css
templates/: index.html
tests/: test_app.py  test_chat.py  test_helpers.py
